--- a/main.css
+++ b/main.css
@@ -1,86 +1,241 @@
 body {
-margin: 0px;
-padding: 0px;
-position: absolute;
-width: auto;
-height: 962px;
-background-color:  #000000;
+  margin: 0px;
+  padding: 0px;
+  background-color: #000;
+}
+
+.hero {
+  /* height: 100vh; */
+  background-image: url("./assets/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 70px;
 }
 
 .logo {
-position: absolute;
-width: 100px;
-height: 124px;
-left: 120px;
-top: 80px;
-mix-blend-mode:normal;
-filter: drop-shadow(1px 0px 1px #000000);
+  display: flex;
 }
 
-.bg {
-width: 1324px;
-height: 962px;
-background-image: url("./assets/bg.jpg");
-background-repeat: no-repeat;
-background-size: cover;
-position: relative;
+.left-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
-.test {
-position: absolute;
-width: 720px;
-height: 129px;
-left: 162px;
-top: 427px;
-font-family: Rosarivo;
-font-style: normal;
-font-weight: normal;
-font-size: 48px;
-line-height: 67px;
-letter-spacing: 0.1em;
-color: #FFFFFF;
+.nav-links {
+  display: flex;
+  margin-right: 50px;
 }
 
-.tet {
-position: absolute;
-width: 615px;
-height: 28px;
-left: 162px;
-top: 635px;
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 24px;
-line-height: 28px;
-letter-spacing: 0.1em;
-color: #FFFFFF;
+.nav-links ul {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
 }
 
-.act {
-position: absolute;
-width: 197px;
-height: 49px;
-left: 308px;
-top: 681px;
-background: #FF0000;
-border-radius: 13px;
-z-index: 2;
+.nav-link {
+  font-size: 20px;
+}
+
+.nav-link a {
+  text-decoration: none;
+  color: #fff;
+  margin-right: 20px;
+}
+
+.search-bar {
+  width: 100%;
+  max-width: 700px;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  border-radius: 60px;
+  padding: 4px 7px;
+}
+
+.search-bar input {
+  background: #fff;
+  flex: 1;
+  border: 0;
+  outline: none;
+  padding: 6px 5px;
+  font-size: 13px;
+  color: #000;
+}
+
+::placeholder {
+  color: #cac7ff;
+}
+
+.search-bar button {
+  border: 0;
+  width: 20px;
+  height: 20px;
+  background: transparent;
+  cursor: pointer;
+}
+
+.search-bar button img {
+  width: 15px;
+}
+
+.login {
+  margin-left: 50px;
+}
+
+.login-btn {
+  background-color: #ff0000;
+  border: none;
+  border-radius: 50px;
+  padding: 10px 35px;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.left-main {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.main {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 70px;
+}
+
+.main-message {
+  color: #fff;
+  line-height: 1.5;
+  font-weight: 400;
+  font-size: 40px;
+  letter-spacing: 5px;
+}
+
+.main-text {
+  color: #fff;
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.main-btn {
+  background-color: #ff0000;
+  border: none;
+  border-radius: 50px;
+  padding: 10px 35px;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+  margin-left: 100px;
+}
+
+.service img {
+  border: 1px solid #fff;
+}
+
+.service-text {
+  color: #fff;
+  padding-top: 0px;
+  padding-bottom: 10px;
 }
 
 footer {
-position: absolute;
-width: 1324px;
-height: 34px;
-top: 948px;
-background-color: black;
-font-family: Rosarivo, Arial, Helvetica, sans-serif ;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 105px;
-/* identical to box height */
-align-items: center;
-text-align: center;
-letter-spacing: 0.30em;
-color: #FFFFFF;
+  color: #fff;
+  padding-top: 100px;
+  font-family: Rosarivo, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 105px;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.3em;
 }
+
+/* .logo {
+  position: absolute;
+  width: 100px;
+  height: 124px;
+  left: 120px;
+  top: 80px;
+  mix-blend-mode: normal;
+  filter: drop-shadow(1px 0px 1px #000000);
+}
+
+.bg {
+  width: 1324px;
+  height: 962px;
+  background-image: url("./assets/bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.test {
+  position: absolute;
+  width: 720px;
+  height: 129px;
+  left: 162px;
+  top: 427px;
+  font-family: Rosarivo;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 67px;
+  letter-spacing: 0.1em;
+  color: #ffffff;
+}
+
+.tet {
+  position: absolute;
+  width: 615px;
+  height: 28px;
+  left: 162px;
+  top: 635px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.1em;
+  color: #ffffff;
+}
+
+.act {
+  position: absolute;
+  width: 197px;
+  height: 49px;
+  left: 308px;
+  top: 681px;
+  background: #ff0000;
+  border-radius: 13px;
+  z-index: 2;
+}
+
+footer {
+  position: absolute;
+  width: 1324px;
+  height: 34px;
+  top: 948px;
+  background-color: black;
+  font-family: Rosarivo, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 105px; */
+/* identical to box height */
+/* align-items: center;
+  text-align: center;
+  letter-spacing: 0.3em;
+  color: #ffffff;
+} */
